--- a/style.css
+++ b/style.css
@@ -1,56 +1,66 @@
+/* Reset default margin dan padding */
+
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
+/* Wrapper utama */
 #calc {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
+/* Container utama */
 #content {
-    background: #2c302c;
-    padding: 20px;
-    border-radius: 10px;
+  background: #2c302c;
+  padding: 20px;
+  border-radius: 10px;
 }
 
+/* Styling tombol pada form */
 #content form input {
-    border: 0;
-    outline: 0;
-    width: 50px;
-    height: 50px;
-    border-radius: 8px;
-    font-size: 15px;
-    margin: 10px;
-    cursor: pointer;
+  border: 0;
+  outline: 0;
+  width: 50px;
+  height: 50px;
+  border-radius: 8px;
+  font-size: 15px;
+  margin: 10px;
+  cursor: pointer;
 }
 
-#backspace {
-    background-color: rgb(237, 89, 30);
-    color: white;
-}
-
-#clear {
-    background-color: rgb(237, 89, 30);
-    color: white;
-}
-
-#res {
-    padding: 10px;
-}
-
+/* Styling output */
 form #output {
-    display: flex;
-    justify-content: flex-end;
-    margin: 15px 0;
+  display: flex;
+  justify-content: flex-end;
+  margin: 15px 0;
 }
 
 form #output input {
-    text-align: right;
-    flex: 1;
-    font-size: 25px;
+  text-align: right;
+  flex: 1;
+  font-size: 25px;
+}
+
+/* Styling tombol backspace */
+#backspace {
+  background-color: rgb(237, 89, 30);
+  color: white;
+}
+
+/* Styling tombol clear */
+#clear {
+  background-color: rgb(237, 89, 30);
+  color: white;
+}
+
+/* Styling hasil */
+#res {
+  padding: 10px;
 }
